--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,8 +3,9 @@ upstream mysite {
 }
 
 server {
-
+    
     listen 80;
+    server_name 65.0.84.104;
 
     location / {
         proxy_pass http://mysite;
