--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,7 +8,7 @@ server {
     server_name 65.0.84.104;
 
     location / {
-        proxy_pass http://mysite;
+        proxy_pass http://65.0.84.104;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
