--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   web:
-    build: .
+    image: parth812/my-app:latest
     command: gunicorn mysite.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - .:/app
