--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,5 +16,8 @@ server {
     location /static/ {
         alias /home/app/web/staticfiles/;
     }
+    location /media/ {
+        alias /home/app/web/static/images/;
+    }
 
 }
