--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - .:/app
       - static_volume:/home/app/web/staticfiles
-      - media_volume:/home/app/web/static/images
+      - media_volume:/home/app/web/mediafiles
     expose:
     - 8000
     env_file:
@@ -29,10 +29,11 @@ services:
     volumes:
       - .:/app
       - static_volume:/home/app/web/staticfiles
-      - media_volume:/home/app/web/static/images
+      - media_volume:/home/app/web/mediafiles
     depends_on:
       - web
 
 volumes:
   postgres_data:
   static_volume:
+  media_volume:
